@@ -977,22 +977,19 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     CONTROL         "&Send deleted files to Recycle Bin",IDC_USE_RECYCLE_BIN,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,7,222,10
-    CONTROL         "Ign&ore time differences less than 3 seconds",
-                    IDC_IGNORE_SMALLTIMEDIFF,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,7,17,222,10
-    GROUPBOX        "Integration",IDC_STATIC,7,30,218,46
+    GROUPBOX        "Integration",IDC_STATIC,7,20,218,46
     CONTROL         "&Add to explorer context menu",IDC_EXPLORER_CONTEXT,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,41,200,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,31,200,10
     CONTROL         "E&nable advanced menu",IDC_EXPLORER_ADVANCED,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,51,200,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,41,200,10
     CONTROL         "In&clude subfolders by default",IDC_EXPLORER_SUBFOLDERS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,61,200,10
-    LTEXT           "&External editor:",IDC_STATIC,7,83,222,8
-    EDITTEXT        IDC_EXT_EDITOR_PATH,7,93,167,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "&Browse...",IDC_EXT_EDITOR_BROWSE,179,93,50,14
-    LTEXT           "&Filter folder:",IDC_STATIC,7,111,166,8
-    EDITTEXT        IDC_FILTER_USER_PATH,7,121,167,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "Browse...",IDC_FILTER_USER_BROWSE,179,121,50,14
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,51,200,10
+    LTEXT           "&External editor:",IDC_STATIC,7,73,222,8
+    EDITTEXT        IDC_EXT_EDITOR_PATH,7,83,167,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "&Browse...",IDC_EXT_EDITOR_BROWSE,179,83,50,14
+    LTEXT           "&Filter folder:",IDC_STATIC,7,101,166,8
+    EDITTEXT        IDC_FILTER_USER_PATH,7,111,167,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Browse...",IDC_FILTER_USER_BROWSE,179,111,50,14
 END
 
 IDD_GENERATE_PATCH DIALOGEX 0, 0, 340, 180
@@ -1156,15 +1153,18 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,90,221,10
     CONTROL         "&Match similar lines",IDC_MATCH_SIMILAR_LINES,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,100,221,10
-    LTEXT           "&File Compare method:",IDC_STATIC,7,115,100,9
-    COMBOBOX        IDC_COMPAREMETHODCOMBO,110,113,114,70,CBS_DROPDOWNLIST |
+    CONTROL         "Ign&ore time differences less than 3 seconds",
+                    IDC_IGNORE_SMALLTIMEDIFF,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,7,110,222,10
+    LTEXT           "&File Compare method:",IDC_STATIC,7,125,100,9
+    COMBOBOX        IDC_COMPAREMETHODCOMBO,110,123,114,70,CBS_DROPDOWNLIST |
                     WS_VSCROLL | WS_TABSTOP
     CONTROL         "S&top after first difference",IDC_COMPARE_STOPFIRST,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,130,202,10
-    GROUPBOX        "Comments",IDC_STATIC,7,144,221,32
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,140,202,10
+    GROUPBOX        "Comments",IDC_STATIC,7,154,221,32
     CONTROL         "Filter Comments",IDC_FILTERCOMMENTS_CHECK,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,15,157,205,10
-    PUSHBUTTON      "Defaults",IDC_COMPARE_DEFAULTS,7,189,70,14
+                    BS_AUTOCHECKBOX | WS_TABSTOP,15,167,205,10
+    PUSHBUTTON      "Defaults",IDC_COMPARE_DEFAULTS,7,190,70,14
 END
 
 IDD_PROPPAGE_EDITOR DIALOGEX 0, 0, 235, 186
